tests/errors/semantics/invalid_pointer_op.odl
main :: () -> void  {
    x := 0pd;
    xp := &x;
    xp*1;
};